--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -3,19 +3,19 @@
 #
 # Set the directory variables, the order doesn't matter.
 # Don't end the directory variables with '/' (forward-slash)!
-#
+
 # REQUIRED: Path_to where the software resides on the server. 
 SOFTWARE="/hpc/local/CentOS7/dhl_ec/software"
-#
+
 # REQUIRED: Path_to where GWASToolKit resides on the server. 
 GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
-#
+
 # REQUIRED: Path_to support programs on the server
 # SNPTEST="${SOFTWARE}/snptest_v2.5.2_CentOS6.5_x86_64_static/snptest_v2.5.2"
 SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
 PLINK2="${SOFTWARE}/plink_v1.9"
 LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
-#
+
 # REQUIRED: qsub settings -- these should work universally
 # FOR GWAS
 QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS 
@@ -30,19 +30,19 @@ QMEMGWASLZOOM="h_vmem=4G" # 4Gb needed for locuszoom
 QTIMEGWASLZOOM="h_rt=01:00:00" # 15mins for locuszoom
 QMEMGWASCLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEGWASCLEANER="h_rt=01:00:00" # 1hours to clean
-#
+
 # FOR VARIANT
 QMEMVAR="h_vmem=8G" # 8Gb for variants
 QTIMEVAR="h_rt=00:15:00" # 15mins for variants
 QMEMVARCLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEVARCLEANER="h_rt=01:00:00" # 1hours to clean
-#
+
 # FOR REGION
 QMEMREG="h_vmem=8G" # 8Gb for regions
 QTIMEREG="h_rt=00:30:00" # 30mins for regions
 QMEMREGCLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEREGCLEANER="h_rt=01:00:00" # 1hours to clean
-#
+
 # FOR GENE
 QMEMGENE="h_vmem=8G" # 8Gb for genes
 QTIMEGENE="h_rt=00:30:00" # 30 minutes for genes
@@ -52,7 +52,7 @@ QMEMGENELZOOM="h_vmem=4G" # 4Gb for locuszoom
 QTIMEGENELZOOM="h_rt=00:15:00" #15mins for locuszoom
 QMEMGENECLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
-#
+
 # REQUIRED: mailing settings
 # you're e-mail address; you'll get an email when the job has ended or when it was aborted
 # 'b' Mail is sent at the beginning of the job; 
@@ -62,55 +62,69 @@ QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
 # 'n' No mail is sent.
 YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl" 
 MAILSETTINGS="a" 
-#
+
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main alysis directory resides.
 PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/lookups/furin_fes_shuye_samani"
-#
+
 # REQUIRED: Name of the project.
 PROJECTNAME="FURIN_FES_CONDITIONAL_on_rs17514846"
-#
+
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
 ANALYSIS_TYPE="VARIANT"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
 STUDY_TYPE="AEGS"
-#
+
 # REQUIRED: give a list of covariates in a file
 # Example covariate-list format:
 # COHORT Age sex PC1_2013 PC2_2013 PC3_2013 PC4_2013 PC5_2013 PC6_2013 PC7_2013 PC8_2013 PC9_2013 PC10_2013
 COVARIATE_FILE="${PROJECTDIR}/covariates.txt"
-#
+
 # REQUIRED: give a list of phenotypes to be analyzed
 PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
-#
+
 # SPECIFIC DATA SETTINGS
+#
 # REQUIRED: location of [imputed] data to use -- all BGEN-format.
+#
 # ### AEGS, 1000G phase 3, GoNL5
 IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
 # ### AEGS, 1000G phase 1
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
 # ### AEGS, GoNL4
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_GoNL4/aegs_combo_gonl4_RAW_chr"
+
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
+### AAAGS, 1000G phase 3 (Michigan Imputation Server)
+# IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_EAGLE2_1000Gp3/aaags.1kgp3.chr"
+### AAAGS, HRC r1.1 (Michigan Imputation Server)
+# IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_EAGLE2_HRC_r11_2016/aaags.hrc_r11_2016.chr"
+
 # ### CTMMGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
-#
+### CTMMGS, 1000G phase 3 (Michigan Imputation Server)
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_EAGLE2_1000Gp3/ctmmgs.1kgp3.chr"
+### CTMMGS, HRC r1.1 (Michigan Imputation Server)
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_EAGLE2_HRC_r11_2016/ctmmgs.hrc_r11_2016.chr"
+
 # REQUIRED: location of sample file.
-	### Set the phenotype file:
-# ### AEGS
-SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegscombo_phenocov.sample"
-# ### AAAGS
-# SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_phenocov.sample"
-# ### CTMMGS
-# SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
 #
-# REQUIRED: exclusion-lists 
+# ### AEGS
+SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/pheno_cov_exclusions/aegscombo_phenocov.sample"
+
+# ### AAAGS
+# SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
+
+# ### CTMMGS
+# SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/pheno_cov_exclusions/ctmm_phenocov.sample"
+
+### REQUIRED: exclusion-lists 
 ### SampleID123X
 ### SampleID123Y
 ### SampleID123Z
-#
+
 # ### AEGS specific exclusion lists
 EXCLUSION="EXCL_DEFAULT"
 EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
@@ -141,53 +155,53 @@ EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL
 
 # ### AAAGS specific exclusion lists
 # EXCLUSION="EXCL_DEFAULT"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS.list"
 # EXCLUSION="EXCL_FEMALES"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Females.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_Females.list"
 # EXCLUSION="EXCL_MALES"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Males.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_Males.list"
 # EXCLUSION="EXCL_CKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_CKD.list"
 # EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_nonCKD.list"
 # EXCLUSION="EXCL_T2D"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_T2D.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_T2D.list"
 # EXCLUSION="EXCL_NONT2D"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonT2D.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_nonT2D.list"
 # EXCLUSION="EXCL_SMOKER"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_SMOKER.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_SMOKER.list"
 # EXCLUSION="EXCL_NONSMOKER"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonSMOKER.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_nonSMOKER.list"
 # EXCLUSION="EXCL_DIURETICS"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_DIURETICS.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_DIURETICS.list"
 # EXCLUSION="EXCL_NONDIURETICS"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonDIURETICS.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGS_nonDIURETICS.list"
 # EXCLUSION="EXCL_DEFAULT_NONAAA"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGSnonAAA.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/exclusion_nonAAAGSnonAAA.list"
 
 ### CTMMGS specific exclusion lists
 # EXCLUSION="EXCL_DEFAULT"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM.list"
 # EXCLUSION="EXCL_FEMALES"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_FEMALES.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_FEMALES.list"
 # EXCLUSION="EXCL_MALES"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_MALES.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_MALES.list"
 # EXCLUSION="EXCL_CKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_CKD.list"
 # EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_nonCKD.list"
 # EXCLUSION="EXCL_T2D"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_T2D.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_T2D.list"
 # EXCLUSION="EXCL_NONT2D"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonT2D.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_nonT2D.list"
 # EXCLUSION="EXCL_SMOKER"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_SMOKER.list"
 # EXCLUSION="EXCL_NONSMOKER"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_nonSMOKER.list"
 # EXCLUSION="EXCL_DIURETICS"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_DIURETICS.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_DIURETICS.list"
 # EXCLUSION="EXCL_NONDIURETICS"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonDIURETICS.list"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/exclusion_nonCTMM_nonDIURETICS.list"
 
 # REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
 # For per-variant analysis
@@ -197,7 +211,7 @@ EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL
 # rs4321 14 12345567
 # rs9876 20 12345567
 VARIANTLIST="${PROJECTDIR}/variantlist.txt"
-#
+
 # REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
 STANDARDIZE="RAW"
 # REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best; 
@@ -210,37 +224,37 @@ BASELINEPHENOTYPE="control"
 CONDITION="NORMAL"
 # CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs2521501.txt"
 CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs17514846.txt"
-#
+
 # REQUIRED: For GWAS -- make PLINK/this work with VCF files NEW VERSION
 CLUMP_P2="1"
 CLUMP_P1="0.000005" # should be of the form 0.005 rather than 5e-3
 CLUMP_R2="0.2"
 CLUMP_KB="500"
 CLUMP_FIELD="P"
-#
+
 # REQUIRED: For regional analysis -- handle this via a file! NEW VERSION
 CHR="1" # e.g. 1
 REGION_START="154376264" # e.g. 154376264
 REGION_END="154476264" # e.g. 154476264
-#
+
 # REQUIRED: For per-gene analysis
 GENES_FILE="${PROJECTDIR}/genelist.txt"
-#
+
 # REQUIRED: For GWAS/REGION/GENE analysis
 RANGE="500000" # 500000=500kb, needed for GWAS (LocusZoom plots); and GENE analyses (analysis and LocusZoom plots)
-#
+
 # REQUIRED: Filter settings -- specifically, GWAS, GENE and REGIONAL analyses
 INFO="0.3"
 MAC="6"
 CAF="0.005"
 BETA_SE="100"
-#
+
 ### SYSTEM REQUIRED | NEVER CHANGE
 OUTPUT_DIR=${PROJECT}/snptest_results # review use of this considering the updates to scripts NEW VERSION
 VARIANTID="2" # this can handle by parseTable! NEW VERSION
 PVALUE="17" # this can handle by parseTable! NEW VERSION
 RANGELZ=$(expr "$RANGE" / 1000) # move this to the locuszoom-script! NEW VERSION
-#
+
 # REQUIRED: References -- these will be created upon installation
 # You can choose one of these options [1kGp3v5GoNL5/1kGp1v3/GoNL4].
 REFERENCE="1kGp3v5GoNL5"
