--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -218,7 +218,7 @@ STANDARDIZE="RAW"
 # refer to SNPTEST documentation and more method options.
 # If you choose `-method newml`, you must supply the baseline-phenotype to which the other
 # discrete phenotypes are compared.
-METHOD="newml"
+METHOD="expected"
 BASELINEPHENOTYPE="control"
 # REQUIRED: You can indicate to condition on a (list of) variant(s) [NORMAL/CONDITION]; refer to SNPTEST documentation.
 CONDITION="NORMAL"
