--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -4,10 +4,10 @@
 # Set the directory variables, the order doesn't matter.
 # Don't end the directory variables with '/' (forward-slash)!
 
-# REQUIRED: Path_to where the software resides on the server. 
+# REQUIRED: Path_to where the software resides on the server.
 SOFTWARE="/hpc/local/CentOS7/dhl_ec/software"
 
-# REQUIRED: Path_to where GWASToolKit resides on the server. 
+# REQUIRED: Path_to where GWASToolKit resides on the server.
 GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
 
 # REQUIRED: Path_to support programs on the server
@@ -18,8 +18,8 @@ LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 
 # REQUIRED: qsub settings -- these should work universally
 # FOR GWAS
-QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS 
-QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS 
+QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS
+QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS
 QMEMGWASCLUMP="h_vmem=180G" # 180Gb needed for clumping
 QTIMEGWASCLUMP="h_rt=48:00:00" # 12 hours for clumping
 QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
@@ -55,13 +55,13 @@ QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
 
 # REQUIRED: mailing settings
 # you're e-mail address; you'll get an email when the job has ended or when it was aborted
-# 'b' Mail is sent at the beginning of the job; 
-# 'e' Mail is sent at the end of the job; 
+# 'b' Mail is sent at the beginning of the job;
+# 'e' Mail is sent at the end of the job;
 # 'a' Mail is sent when the job is aborted or rescheduled.
 # 's' Mail is sent when the job is suspended;
 # 'n' No mail is sent.
-YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl" 
-MAILSETTINGS="a" 
+YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
+MAILSETTINGS="a"
 
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main alysis directory resides.
@@ -76,6 +76,10 @@ ANALYSIS_TYPE="VARIANT"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
 STUDY_TYPE="AEGS"
 
+# REQUIRED
+# Indicate the file extension used for the genetic data [bgen, gen, gen.gz, vcf, vcf.gz]
+GENETICEXTENSION="vcf.gz"
+
 # REQUIRED: give a list of covariates in a file
 # Example covariate-list format:
 # COHORT Age sex PC1_2013 PC2_2013 PC3_2013 PC4_2013 PC5_2013 PC6_2013 PC7_2013 PC8_2013 PC9_2013 PC10_2013
@@ -89,7 +93,7 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 # REQUIRED: location of [imputed] data to use -- all BGEN-format.
 #
 # ### AEGS, 1000G phase 3, GoNL5
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
 # ### AEGS, 1000G phase 1
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
 # ### AEGS, GoNL4
@@ -97,7 +101,8 @@ IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/
 # ### AEGS, 1000G phase 3 (Michigan Imputation Server)
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_1000Gp3/aegs.combo.1kgp3.chr"
 # ### AEGS, HRC r1.1 (Michigan Imputation Server)
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/aegs.combo.hrc_r11_2016.chr"
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/aegs.combo.hrc_r11_2016.chr"
+IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
@@ -124,14 +129,15 @@ SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/aegscombo_pheno
 # ### CTMMGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/ctmm_phenocov.sample"
 
-### REQUIRED: exclusion-lists 
+### REQUIRED: exclusion-lists
 ### SampleID123X
 ### SampleID123Y
 ### SampleID123Z
 
 # ### AEGS specific exclusion lists
 EXCLUSION="EXCL_DEFAULT"
-EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA.list
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA.list
+EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_default.list
 # EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_Females.list
 # EXCLUSION="EXCL_MALES"
@@ -139,7 +145,7 @@ EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_non
 # EXCLUSION="EXCL_CKD"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_CKD.list
 # EXCLUSION="EXCL_NONCKD"
-# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_nonCKD.list	
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_nonCKD.list
 # EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_T2D.list
 # EXCLUSION="EXCL_NONT2D"
@@ -218,7 +224,7 @@ VARIANTLIST="${PROJECTDIR}/variantlist.txt"
 
 # REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
 STANDARDIZE="RAW"
-# REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best; 
+# REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best;
 # refer to SNPTEST documentation and more method options.
 # If you choose `-method newml`, you must supply the baseline-phenotype to which the other
 # discrete phenotypes are compared.
@@ -263,11 +269,8 @@ RANGELZ=$(expr "$RANGE" / 1000) # move this to the locuszoom-script! NEW VERSION
 # You can choose one of these options [1kGp3v5GoNL5/1kGp1v3/GoNL4].
 REFERENCE="1kGp3v5GoNL5"
 REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
-# You can choose one of these: 
+# You can choose one of these:
 # - refSeq based: refseq_GRCh37_hg19_Feb2009.txt.gz
 # - GENCODE based: gencode_v19_GRCh37_hg19_Feb2009.txt.gz
 # - PLINK-style gene list: glist-hg19.gz
 HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19.gz"
-
-
-
