Added new genetic data linking.

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -20,8 +20,8 @@ LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 # FOR GWAS
 QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS
 QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS
-QMEMGWASCLUMP="h_vmem=180G" # 180Gb needed for clumping
-QTIMEGWASCLUMP="h_rt=48:00:00" # 12 hours for clumping
+QMEMGWASCLUMP="h_vmem=8G" # 180Gb needed for clumping
+QTIMEGWASCLUMP="h_rt=12:00:00" # 12 hours for clumping
 QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
 QTIMEGWASPLOT="h_rt=12:00:00" # 4 hours for plotter
 QMEMGWASPLOTQC="h_vmem=8G" # 4gb for plotter qc
@@ -64,16 +64,16 @@ YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
 MAILSETTINGS="a"
 
 # ANALYSIS SETTINGS
-# REQUIRED: Path_to where the main alysis directory resides.
-PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/lookups/furin_fes_shuye_samani"
+# REQUIRED: Path_to where the main analysis directory resides.
+PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR"
 
 # REQUIRED: Name of the project.
-PROJECTNAME="FURIN_FES_CONDITIONAL_on_rs17514846"
+PROJECTNAME="SOME_FANCY_PROJECTNAME"
 
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
 ANALYSIS_TYPE="VARIANT"
-# You can choose one of these options [AEGS/AAAGS/CTMM].
+# You can choose one of these options [AEGS/AAAGS/CTMM/UCORBIO/MYOMARKER/HELPFULL/RIVM].
 STUDY_TYPE="AEGS"
 
 # REQUIRED
