Implemented and tested new SNPTEST flags -[in]exclude_samples_where; as well as added a flag to indicate the genetic data file-extension.

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -102,7 +102,7 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_1000Gp3/aegs.combo.1kgp3.chr"
 # ### AEGS, HRC r1.1 (Michigan Imputation Server)
 IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/aegs.combo.hrc_r11_2016.chr"
-IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
+IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
@@ -129,15 +129,21 @@ SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/aegscombo_pheno
 # ### CTMMGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/pheno_cov_exclusions/ctmm_phenocov.sample"
 
-### REQUIRED: exclusion-lists
+### REQUIRED: exclusion criteria according to the format "-[in/ex]clude_samples_where <name> [=|==|!=] <value>"
+### OLD Version
+### exclusion-lists
 ### SampleID123X
 ### SampleID123Y
 ### SampleID123Z
 
+### DEFAULT
+EXCLUSION_CRITERIA="-exclude_samples_where \"SELECTION\"==\"not_selected\" "
+
 # ### AEGS specific exclusion lists
 EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA.list
-EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_default.list
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_default.list
+
 # EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_Females.list
 # EXCLUSION="EXCL_MALES"
