Shhhhquashed some buggzzzz.

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -20,7 +20,7 @@ LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 # FOR GWAS
 QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS
 QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS
-QMEMGWASCLUMP="h_vmem=8G" # 180Gb needed for clumping
+QMEMGWASCLUMP="h_vmem=8G" # 8Gb needed for clumping
 QTIMEGWASCLUMP="h_rt=12:00:00" # 12 hours for clumping
 QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
 QTIMEGWASPLOT="h_rt=12:00:00" # 4 hours for plotter
@@ -92,16 +92,14 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 #
 # REQUIRED: location of [imputed] data to use -- all BGEN-format.
 #
-# ### AEGS, 1000G phase 3, GoNL5
+# ### AEGS, 1000G phase 3, GoNL5 - bgen files
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
 # ### AEGS, 1000G phase 1
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
 # ### AEGS, GoNL4
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_GoNL4/aegs_combo_gonl4_RAW_chr"
-# ### AEGS, 1000G phase 3 (Michigan Imputation Server)
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_1000Gp3/aegs.combo.1kgp3.chr"
-# ### AEGS, HRC r1.1 (Michigan Imputation Server)
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_EAGLE2_HRC_r11_2016/aegs.combo.hrc_r11_2016.chr"
+# ### AEGS, 1000G phase 3 and HRC r1.1 combined (Michigan Imputation Server) - vcf.gz files
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/aegs.qc.1kgp3hrcr11.chr"
 IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
@@ -121,7 +119,8 @@ IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5H
 # REQUIRED: location of sample file.
 #
 # ### AEGS
-SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/aegscombo_phenocov.sample"
+SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11_pheno/20200419.QC.AEGS123.sample"
+SAMPLE_FILE_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11_pheno/20200419.QC.AEGS123.chrX.sample"
 
 # ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
@@ -142,8 +141,6 @@ EXCLUSION_CRITERIA="-exclude_samples_where \"SELECTION\"==\"not_selected\" "
 # ### AEGS specific exclusion lists
 EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA.list
-# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_default.list
-
 # EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/pheno_cov_exclusions/exclusion_nonCEA_Females.list
 # EXCLUSION="EXCL_MALES"
