--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -32,10 +32,16 @@ QMEMGWASCLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEGWASCLEANER="h_rt=01:00:00" # 1hours to clean
 
 # FOR VARIANT
-QMEMVAR="h_vmem=8G" # 8Gb for variants
-QTIMEVAR="h_rt=00:15:00" # 15mins for variants
-QMEMVARCLEANER="h_vmem=4G" # 4Gb needed for cleaner
-QTIMEVARCLEANER="h_rt=01:00:00" # 1hours to clean
+# Old SGE specs, changing to SLURM below
+# QMEMVAR="h_vmem=8G" # 8Gb for variants
+# QTIMEVAR="h_rt=00:15:00" # 15mins for variants
+# QMEMVARCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+# QTIMEVARCLEANER="h_rt=01:00:00" # 1hours to clean
+# NEW SLURM options
+QMEMVAR="8G" # 8Gb for variants
+QTIMEVAR="00:15:00" # 15mins for variants
+QMEMVARCLEANER="4G" # 4Gb needed for cleaner
+QTIMEVARCLEANER="01:00:00" # 1hours to clean
 
 # FOR REGION
 QMEMREG="h_vmem=8G" # 8Gb for regions
@@ -54,14 +60,26 @@ QMEMGENECLEANER="h_vmem=4G" # 4Gb needed for cleaner
 QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
 
 # REQUIRED: mailing settings
+# Old SGE specs, changing to SLURM below
 # you're e-mail address; you'll get an email when the job has ended or when it was aborted
 # 'b' Mail is sent at the beginning of the job;
 # 'e' Mail is sent at the end of the job;
 # 'a' Mail is sent when the job is aborted or rescheduled.
 # 's' Mail is sent when the job is suspended;
 # 'n' No mail is sent.
+# YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
+# MAILSETTINGS="a"
+
+# NEW SLURM options for email
+# you're e-mail address; you'll get an email when the job has ended or when it was aborted
+# 'BEGIN' Mail is sent at the beginning of the job;
+# 'END' Mail is sent at the end of the job;
+# 'FAIL' Mail is sent when the job fails.
+# 'REQUEUE' Mail is sent when the job is re-queued;
+# 'ALL' Mail sent for all the above.
 YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
-MAILSETTINGS="a"
+MAILSETTINGS="ALL"
+
 
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main analysis directory resides.
