--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -18,18 +18,35 @@ LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 
 # REQUIRED: qsub settings -- these should work universally
 # FOR GWAS
-QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS
-QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS
-QMEMGWASCLUMP="h_vmem=8G" # 8Gb needed for clumping
-QTIMEGWASCLUMP="h_rt=12:00:00" # 12 hours for clumping
-QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
-QTIMEGWASPLOT="h_rt=12:00:00" # 4 hours for plotter
-QMEMGWASPLOTQC="h_vmem=8G" # 4gb for plotter qc
-QTIMEGWASPLOTQC="h_rt=12:00:00" # 4 hours for plotter qc
-QMEMGWASLZOOM="h_vmem=4G" # 4Gb needed for locuszoom
-QTIMEGWASLZOOM="h_rt=01:00:00" # 15mins for locuszoom
-QMEMGWASCLEANER="h_vmem=4G" # 4Gb needed for cleaner
-QTIMEGWASCLEANER="h_rt=01:00:00" # 1hours to clean
+# QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS
+# QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS
+# QMEMGWASCLUMP="h_vmem=8G" # 8Gb needed for clumping
+# QTIMEGWASCLUMP="h_rt=12:00:00" # 12 hours for clumping
+# QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
+# QTIMEGWASPLOT="h_rt=12:00:00" # 4 hours for plotter
+# QMEMGWASPLOTQC="h_vmem=8G" # 4gb for plotter qc
+# QTIMEGWASPLOTQC="h_rt=12:00:00" # 4 hours for plotter qc
+# QMEMGWASLZOOM="h_vmem=4G" # 4Gb needed for locuszoom
+# QTIMEGWASLZOOM="h_rt=01:00:00" # 15mins for locuszoom
+# QMEMGWASCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+# QTIMEGWASCLEANER="h_rt=01:00:00" # 1hours to clean
+# NEW SLURM options
+QMEMGWAS="8G" # '8Gb' for GWAS
+QTIMEGWAS="12:00:00" # 12 hours for GWAS
+QMEMGWASCLUMP="8G" # 8Gb needed for clumping
+QTIMEGWASCLUMP="12:00:00" # 12 hours for clumping
+QMEMGWASPLOT="8G" # 8Gb for snptest plotter
+QTIMEGWASPLOT="12:00:00" # 12 hours for plotter
+QMEMGWASPLOTQC="8G" # 8gb for plotter qc
+QTIMEGWASPLOTQC="12:00:00" # 12 hours for plotter qc
+QMEMGWASLZOOM="4G" # 4Gb needed for locuszoom
+QTIMEGWASLZOOM="01:00:00" # 1 hour for locuszoom
+QMEMGWASCLEANER="4G" # 4Gb needed for cleaner
+QTIMEGWASCLEANER="01:00:00" # 1 hour to clean
+QMEMVAR="8G" # 8Gb for variants
+QTIMEVAR="00:15:00" # 15mins for variants
+QMEMVARCLEANER="4G" # 4Gb needed for cleaner
+QTIMEVARCLEANER="01:00:00" # 1hours to clean
 
 # FOR VARIANT
 # Old SGE specs, changing to SLURM below
@@ -44,20 +61,36 @@ QMEMVARCLEANER="4G" # 4Gb needed for cleaner
 QTIMEVARCLEANER="01:00:00" # 1hours to clean
 
 # FOR REGION
-QMEMREG="h_vmem=8G" # 8Gb for regions
-QTIMEREG="h_rt=00:30:00" # 30mins for regions
-QMEMREGCLEANER="h_vmem=4G" # 4Gb needed for cleaner
-QTIMEREGCLEANER="h_rt=01:00:00" # 1hours to clean
+# Old SGE specs, changing to SLURM below
+# QMEMREG="h_vmem=8G" # 8Gb for regions
+# QTIMEREG="h_rt=00:30:00" # 30mins for regions
+# QMEMREGCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+# QTIMEREGCLEANER="h_rt=01:00:00" # 1hours to clean
+# NEW SLURM options
+QMEMREG="8G" # 8Gb for regions
+QTIMEREG="00:30:00" # 30mins for regions
+QMEMREGCLEANER="4G" # 4Gb needed for cleaner
+QTIMEREGCLEANER="01:00:00" # 1hours to clean
 
 # FOR GENE
-QMEMGENE="h_vmem=8G" # 8Gb for genes
-QTIMEGENE="h_rt=00:30:00" # 30 minutes for genes
-QMEMGENEQC="h_vmem=4G" # 4 Gb for snptest qc
-QTIMEGENEQC="h_rt=00:30:00" # 30 minutes for snptest qc
-QMEMGENELZOOM="h_vmem=4G" # 4Gb for locuszoom
-QTIMEGENELZOOM="h_rt=00:15:00" #15mins for locuszoom
-QMEMGENECLEANER="h_vmem=4G" # 4Gb needed for cleaner
-QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
+# Old SGE specs, changing to SLURM below
+# QMEMGENE="h_vmem=8G" # 8Gb for genes
+# QTIMEGENE="h_rt=00:30:00" # 30 minutes for genes
+# QMEMGENEQC="h_vmem=4G" # 4 Gb for snptest qc
+# QTIMEGENEQC="h_rt=00:30:00" # 30 minutes for snptest qc
+# QMEMGENELZOOM="h_vmem=4G" # 4Gb for locuszoom
+# QTIMEGENELZOOM="h_rt=00:15:00" #15mins for locuszoom
+# QMEMGENECLEANER="h_vmem=4G" # 4Gb needed for cleaner
+# QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
+# NEW SLURM options
+QMEMGENE="8G" # 8Gb for genes
+QTIMEGENE="00:30:00" # 30 minutes for genes
+QMEMGENEQC="4G" # 4 Gb for snptest qc
+QTIMEGENEQC="00:30:00" # 30 minutes for snptest qc
+QMEMGENELZOOM="4G" # 4Gb for locuszoom
+QTIMEGENELZOOM="00:15:00" #15mins for locuszoom
+QMEMGENECLEANER="4G" # 4Gb needed for cleaner
+QTIMEGENECLEANER="01:00:00" # 1hours to clean
 
 # REQUIRED: mailing settings
 # Old SGE specs, changing to SLURM below
@@ -78,7 +111,7 @@ QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
 # 'REQUEUE' Mail is sent when the job is re-queued;
 # 'ALL' Mail sent for all the above.
 YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
-MAILSETTINGS="ALL"
+MAILSETTINGS="FAIL"
 
 
 # ANALYSIS SETTINGS
