updates and edits

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -69,10 +69,10 @@ MAILSETTINGS="FAIL"
 
 
 # ANALYSIS SETTINGS
-# REQUIRED: Path_to where the main analysis directory resides.
+# REQUIRED: Path_to where the main analysis directory resides. Make sure that it exists
 PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR"
 
-# REQUIRED: Name of the project.
+# REQUIRED: Name of the project, this will automatically be made.
 PROJECTNAME="SOME_FANCY_PROJECTNAME"
 
 # REQUIRED: Analysis settings.
@@ -124,8 +124,8 @@ IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5H
 # REQUIRED: location of sample file.
 #
 # ### AEGS
-SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11_pheno/20200419.QC.AEGS123.sample"
-SAMPLE_FILE_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11_pheno/20200419.QC.AEGS123.chrX.sample"
+SAMPLE_FILE="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR/SNP/20201105.LOOKUP.AEGS123.sample"
+SAMPLE_FILE_CHRX="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR/SNP/20201105.LOOKUP.AEGS123.chrX.sample"
 
 # ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
