--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -16,7 +16,7 @@ SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-bet
 PLINK2="${SOFTWARE}/plink_v1.9"
 LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 
-# REQUIRED: qsub settings -- these should work universally
+# REQUIRED: SLURM settings -- these should work universally
 # FOR GWAS
 QMEMGWAS="8G" # '8Gb' for GWAS
 QTIMEGWAS="12:00:00" # 12 hours for GWAS
