edits to the reference for snptest, new version 2.5.6 was added

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -12,7 +12,8 @@ GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
 
 # REQUIRED: Path_to support programs on the server
 # SNPTEST="${SOFTWARE}/snptest_v2.5.2_CentOS6.5_x86_64_static/snptest_v2.5.2"
-SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
+# SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
+SNPTEST="${SOFTWARE}/snptest_v2.5.6_CentOS_Linux7.8-x86_64_dynamic/snptest_v2.5.6"
 PLINK2="${SOFTWARE}/plink_v1.9"
 LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 
