remove exclusion list variable, cleaned up configuration file

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -122,8 +122,8 @@ IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5H
 ### REQUIRED: location of sample file.
 #
 ### AEGS
-SAMPLE_FILE="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR/SNP/20201105.LOOKUP.AEGS123.sample"
-SAMPLE_FILE_CHRX="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR/SNP/20201105.LOOKUP.AEGS123.chrX.sample"
+SAMPLE_FILE="${PROJECTDIR}/20201105.LOOKUP.AEGS123.sample"
+SAMPLE_FILE_CHRX="${PROJECTDIR}/20201105.LOOKUP.AEGS123.chrX.sample"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
