fixed links in configuration file

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -11,8 +11,10 @@ SOFTWARE="/hpc/local/Rocky8/dhl_ec/software"
 GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
 
 ### REQUIRED: Path_to support programs on the server
-SNPTEST="${SOFTWARE}/snptest_v2.5.6_CentOS_Linux7.8.2003-x86_64_dynamic/snptest_v2.5.6"
-PLINK2="${SOFTWARE}/plink_v1.90_beta7_20230116"
+SNPTEST="${SOFTWARE}/snptest_v2.5.4"
+# SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
+PLINK2="${SOFTWARE}/plink19"
+# PLINK2="${SOFTWARE}/plink_linux_x86_64_20231211_beta_7_2/plink"
 LOCUSZOOM13="${SOFTWARE}/locuszoom_1.3/bin/locuszoom"
 
 ### REQUIRED: SLURM settings -- these should work universally
@@ -96,11 +98,6 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 ### REQUIRED: location of [imputed] data to use -- all BGEN-format.
 #
 ### AEGS, 1000G phase 3, GoNL5 - bgen files
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
-### AEGS, 1000G phase 1
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
-### AEGS, GoNL4
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_GoNL4/aegs_combo_gonl4_RAW_chr"
 ### AEGS, 1000G phase 3 and HRC r1.1 combined (Michigan Imputation Server) - vcf.gz files
 IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/aegs.qc.1kgp3hrcr11.chr"
 IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
