--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -12,9 +12,7 @@ GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
 
 ### REQUIRED: Path_to support programs on the server
 SNPTEST="${SOFTWARE}/snptest_v2.5.4"
-# SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
 PLINK2="${SOFTWARE}/plink19"
-# PLINK2="${SOFTWARE}/plink_linux_x86_64_20231211_beta_7_2/plink"
 LOCUSZOOM13="${SOFTWARE}/locuszoom_1.3/bin/locuszoom"
 
 ### REQUIRED: SLURM settings -- these should work universally
@@ -71,7 +69,7 @@ MAILSETTINGS="FAIL"
 
 ### ANALYSIS SETTINGS
 ### REQUIRED: Path_to where the main analysis directory resides. Make sure that it exists
-PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/SOMEDIR"
+PROJECTDIR="/hpc/dhl_ec/projects/SOMEDIR"
 
 ### REQUIRED: Name of the project, this will automatically be made.
 PROJECTNAME="SOME_FANCY_PROJECTNAME"
@@ -97,10 +95,13 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 ### SPECIFIC DATA SETTINGS
 ### REQUIRED: location of [imputed] data to use -- all BGEN-format.
 #
-### AEGS, 1000G phase 3, GoNL5 - bgen files
 ### AEGS, 1000G phase 3 and HRC r1.1 combined (Michigan Imputation Server) - vcf.gz files
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/aegs.qc.1kgp3hrcr11.chr"
-IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
+# b37 -- AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11 version
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/aegs.qc.1kgp3hrcr11.chr"
+# IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
+#
+### AEGS, TOPMed r3, f10, b38 - vcf.gz files
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
@@ -119,8 +120,12 @@ IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5H
 ### REQUIRED: location of sample file.
 #
 ### AEGS
-SAMPLE_FILE="${PROJECTDIR}/20201105.LOOKUP.AEGS123.sample"
-SAMPLE_FILE_CHRX="${PROJECTDIR}/20201105.LOOKUP.AEGS123.chrX.sample"
+# b37 -- AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11 version
+# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.females.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.males.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.sample"
+# SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
+SAMPLE_FILE="${PROJECTDIR}/20240531.PCSK9.AEGS123.sample"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
@@ -163,6 +168,7 @@ VARIANTLIST="${PROJECTDIR}/variantlist.txt"
 
 ### REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
 STANDARDIZE="RAW"
+
 ### REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best;
 ### refer to SNPTEST documentation and more method options.
 ### If you choose `-method newml`, you must supply the baseline-phenotype to which the other
@@ -208,6 +214,7 @@ RANGELZ=$(expr "$RANGE" / 1000) # move this to the locuszoom-script! NEW VERSION
 ### You can choose one of these options [1kGp3v5GoNL5/1kGp1v3/GoNL4].
 REFERENCE="1kGp3v5GoNL5"
 REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
+
 ### You can choose one of these:
 ### - refSeq based: refseq_GRCh37_hg19_Feb2009.txt.gz
 ### - GENCODE based: gencode_v19_GRCh37_hg19_Feb2009.txt.gz
