fixed reference to VCF-files for b38, added notes about that; changed reference to chromosomes in example variant-list; created b37 example variantlist; changed example phenotype to something generic

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -95,13 +95,15 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 ### SPECIFIC DATA SETTINGS
 ### REQUIRED: location of [imputed] data to use -- all BGEN-format.
 #
-### AEGS, 1000G phase 3 and HRC r1.1 combined (Michigan Imputation Server) - vcf.gz files
+### AEGS, 1000G phase 3 and HRC r1.1 combined (Michigan Imputation Server) - vcf.gz files 
+# (note that b37 codes chromosomes as '[#]', for example '1'; this is reflected in the code hence the inclusion of 'chr' in the file names)
 # b37 -- AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11 version
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/aegs.qc.1kgp3hrcr11.chr"
 # IMPUTEDDATA_CHRX="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11/_chr23_1kg_gonl5/aegs.1kgp3gonl5.chr"
 #
-### AEGS, TOPMed r3, f10, b38 - vcf.gz files
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
+### AEGS, TOPMed r3, f10, b38 - vcf.gz files 
+# (note that b38 codes chromosomes as 'chr[#]', for example 'chr1')
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter."
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
