--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -103,7 +103,7 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 #
 ### AEGS, TOPMed r3, f10, b38 - vcf.gz files 
 # (note that b38 codes chromosomes as 'chr[#]', for example 'chr1')
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter."
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
