Added Basic Regenie support to GWASToolkit

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -8,11 +8,12 @@
 SOFTWARE="/hpc/local/Rocky8/dhl_ec/software"
 
 ### REQUIRED: Path_to where GWASToolKit resides on the server.
-GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
+# GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
+GWASTOOLKITDIR="/hpc/dhl_ec/tpeters/git_repos/GWASToolKit"
 
 ### REQUIRED: Path_to support programs on the server
 SNPTEST="${SOFTWARE}/snptest_v2.5.4"
-PLINK2="${SOFTWARE}/plink19"
+PLINK2="${SOFTWARE}/plink2"
 LOCUSZOOM13="${SOFTWARE}/locuszoom_1.3/bin/locuszoom"
 
 ### REQUIRED: SLURM settings -- these should work universally
@@ -63,20 +64,22 @@ QTIMEGENECLEANER="01:00:00" # 1hours to clean
 ### 'FAIL' Mail is sent when the job fails.
 ### 'REQUEUE' Mail is sent when the job is re-queued;
 ### 'ALL' Mail sent for all the above.
-YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
+YOUREMAIL="t.s.peters-4@umcutrecht.nl"
 MAILSETTINGS="FAIL"
 
 
 ### ANALYSIS SETTINGS
 ### REQUIRED: Path_to where the main analysis directory resides. Make sure that it exists
-PROJECTDIR="/hpc/dhl_ec/projects/SOMEDIR"
+PROJECTDIR="/hpc/dhl_ec/tpeters/git_repos/GWASToolKit/test_output"
 
 ### REQUIRED: Name of the project, this will automatically be made.
-PROJECTNAME="SOME_FANCY_PROJECTNAME"
+PROJECTNAME="test_project"
 
 ### REQUIRED: Analysis settings.
 ### You can choose one of these options [GWAS/VARIANT/REGION/GENES].
-ANALYSIS_TYPE="VARIANT"
+ANALYSIS_TYPE="GWAS"
+### You can choose one of these options if GWAS is chosen [SNPTEST/REGENIE]
+GWAS_TYPE="REGENIE"
 ### You can choose one of these options [AEGS/AAAGS/CTMM/UCORBIO/MYOMARKER/HELPFULL/RIVM].
 STUDY_TYPE="AEGS"
 
@@ -103,7 +106,8 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 #
 ### AEGS, TOPMed r3, f10, b38 - vcf.gz files 
 # (note that b38 codes chromosomes as 'chr[#]', for example 'chr1')
-IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
+IMPUTEDDATA="/hpc/dhl_ec/tpeters/regenie_pgen/converted/aegscombo_topmed_r3_f10_b38.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
@@ -127,7 +131,7 @@ IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_t
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.males.sample"
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.sample"
 # SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
-SAMPLE_FILE="${PROJECTDIR}/20240531.PCSK9.AEGS123.sample"
+SAMPLE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/20240723.IPH_CLAM.AEGS123.pheno"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
@@ -222,3 +226,35 @@ REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
 ### - GENCODE based: gencode_v19_GRCh37_hg19_Feb2009.txt.gz
 ### - PLINK-style gene list: glist-hg19.gz
 HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19.gz"
+
+
+# REGENIE Addition
+REGENIE="${SOFTWARE}/mambaforge3/envs/gwasregenie/bin/regenie"
+
+REGENIE_CALL_RATE="0.10" # PLINK call rate with the flag --geno
+REGENIE_MAF="0.10" # PLINK MAF with the flag --maf
+REGENIE_HWE="1e-3" # PLINK Hardy-Weinberg Equilibrium (HWE) with the flag --hwe
+REGENIE_PRUNE="100 10 0.2" #Prune the data to only select independent SNPs (with low LD r^2) of one pair each with r^2 = 0.2 with the flags --indep-pairwise
+
+REGENIE_STEP1_BZISE="1000"
+REGENIE_STEP2_BZISE="1000"
+
+IMPUTEDDATA_ALLCHR="/hpc/dhl_ec/tpeters/regenie_pgen/OUT/aegscombo_topmed_r3_f10_b38.allChrs"
+
+QMEMGWASREGENIE="16G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE="00:15:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIE1="64G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE1="2:00:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIE2="64G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE2="8:00:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIEWRAP="16G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIEWRAP="00:15:00" # 12 hours for GWAS Regenie
+
+EXCLUDE_RANGE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/exclude_problematic_range_b38.txt"
+
+COVARIATE_QUANTATIVE="Age,PC1,PC2,ORyear"
+COVARIATE_BINARY="SEX"
+PHENOTYPE_QUANTATIVE="IPH_CLAM_prob,IPH_CLAM_area,IPH_CLAM_prob_rankNorm,IPH_CLAM_area_rankNorm"
+# PHENOTYPE_QUANTATIVE=""
+PHENOTYPE_BINARY="IPH_CLAM_int"
+# PHENOTYPE_BINARY=""
