Add info (Mach-R2) to regenie step 2

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -131,7 +131,7 @@ IMPUTEDDATA="/hpc/dhl_ec/tpeters/regenie_pgen/converted/aegscombo_topmed_r3_f10_
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.males.sample"
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.sample"
 # SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
-SAMPLE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/20240723.IPH_CLAM.AEGS123.pheno"
+SAMPLE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/20240905.IPH_Binary.AEGS123.pheno"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
@@ -254,7 +254,7 @@ EXCLUDE_RANGE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/exclude_problematic_range_b
 
 COVARIATE_QUANTATIVE="Age,PC1,PC2,ORyear"
 COVARIATE_BINARY="SEX"
-PHENOTYPE_QUANTATIVE="IPH_CLAM_prob,IPH_CLAM_area,IPH_CLAM_prob_rankNorm,IPH_CLAM_area_rankNorm"
+# PHENOTYPE_QUANTATIVE="IPH_CLAM_prob,IPH_CLAM_area,IPH_CLAM_prob_rankNorm,IPH_CLAM_area_rankNorm"
 # PHENOTYPE_QUANTATIVE=""
-PHENOTYPE_BINARY="IPH_CLAM_int"
+PHENOTYPE_BINARY="IPH,IPH_CLAM"
 # PHENOTYPE_BINARY=""
